--- a/keerthika/Dribbleapp/static/index.html
+++ b/keerthika/Dribbleapp/static/index.html
@@ -3,143 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explore the books </title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Dribbble Clone</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="bg-light">
-
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+<body class="bg-light text-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">The Paper Garden</a>
+            <a class="navbar-brand" href="#">Dribbble Clone</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="#home">home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#profile">profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Gallery</a>
+                        <a class="nav-link" href="#shots">shots</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Log In</a>
+                        <a class="nav-link" href="#now">now</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-light text-dark px-3" href="#">Sign Up</a>
+                        <a href="#signup" class="btn btn-success ms-2">Sign Up</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Header -->
-    <div class="bg-success text-white text-center py-4">
-        <h1>The Paper Garden</h1>
-        <p class="mb-0">"A name that speaks to the creative energy of books and stories!"</p>
-    </div>
-
-    <!-- Categories -->
-    <div class="container my-5">
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-                <a href="#" class="text-decoration-none">
-                    <div class="card h-100">
-                        <div class="ratio ratio-4x3">
-                        <img src="1.jpg" class="card-img-top img-fluid" alt="The Twins Hit Hollywood">
-                        <div class="card-body">
-                            <h5 class="card-title">The Twins Hit Hollywood</h5>
-                            <p class="card-text">This article includes a list of references, related reading, 
-                                or external links, but its sources remain unclear because it lacks inline citations</p>
-                        </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col">
-                <a href="#" class="text-decoration-none">
-                    <div class="card h-100">
-                        <div class="ratio ratio-4x3">
-                        <img src="2.jpg" class="card-img-top img-fluid" alt="Percy Jackson and the Titan's Curse">
-                        <div class="card-body">
-                            <h5 class="card-title">Percy Jackson and the Titan's Curse</h5>
-                            <p class="card-text">The Titan's Curse is an American fantasy-adventure novel.</p>
-                        </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col">
-                <a href="#" class="text-decoration-none">
-                    <div class="card h-100">
-                        <div class="ratio ratio-4x3">
-                        <img src="3.jpg" class="card-img-top img-fluid" alt="Zoology">
-                        <div class="card-body">
-                            <h5 class="card-title">Zoology</h5>
-                            <p class="card-text">Are We Smart Enough to Know How Smart Animals Are? </p>
-                        </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col">
-                <a href="#" class="text-decoration-none">
-                    <div class="card h-100">
-                        <div class="ratio ratio-4x3">
-                        <img src="4.jpg" class="card-img-top img-fluid" alt="The black obelisk.">
-                        <div class="card-body">
-                            <h5 class="card-title">The black obelisk.</h5>
-                            <p class="card-text">Ludwig, the protagonist in his mid twenties just like most of his friends.</p>
-                        </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col">
-                <a href="#" class="text-decoration-none">
-                    <div class="card h-100">
-                        <div class="ratio ratio-4x3">
-                        <img src="5.jpg" class="card-img-top img-fluid" alt="The Psychology of Money">
-                        <div class="card-body">
-                            <h5 class="card-title">The Psychology of Money</h5>
-                            <p class="card-text">Timeless lessons on wealth, greed, and happiness.</p>
-                        </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col">
-                <a href="#" class="text-decoration-none">
-                    <div class="card h-100">
-                        <div class="ratio ratio-4x3">
-                        <img src="6.jpg" class="card-img-top img-fluid" alt="The secret">
-                        <div class="card-body">
-                            <h5 class="card-title">The secret</h5>
-                            <p class="card-text"> In every aspect of life, money, health, and happiness will follow.</p>
-                        </div>
-                        </div>
-                    </div>
-                </a>
+    
+    <section class="text-center py-5 bg-primary">
+        <div class="container ">
+            <h1 class="display-4 text-light">Creative Writing</h1>
+            <p class="lead text-light">Try writing poetry or short stories, even if they're abstract or experimental.</p>
+            <img src="1.png">
+            <p>Samir</p>
+        </div>
+    </section>
+    <section class="py-5 bg-secondary">
+        <div class="container">
+            <h2 class="text-light text-center mb-4">Collaborative Brainstorming</h2>
+            <div class="row g-4">
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="2.png"class="img-fluid rounded" alt="Work 1" >
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="3.png" class="img-fluid rounded" alt="Work 2">
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="4.png" class="img-fluid rounded" alt="Work 3">
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="5.png" class="img-fluid rounded" alt="Work 4">
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="6.png" class="img-fluid rounded" alt="Work 5">
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="7.png" class="img-fluid rounded" alt="Work 6">
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="8.png" class="img-fluid rounded" alt="Work 7">
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="9.png" class="img-fluid rounded" alt="Work 8">
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="10.png"class="img-fluid rounded" alt="Work 1" >
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="11.png" class="img-fluid rounded" alt="Work 2">
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="12.png" class="img-fluid rounded" alt="Work 3">
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="13.png" class="img-fluid rounded" alt="Work 4">
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="14.png" class="img-fluid rounded" alt="Work 5">
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="15.png" class="img-fluid rounded" alt="Work 6">
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="16.png" class="img-fluid rounded" alt="Work 7">
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <img src="17.png" class="img-fluid rounded" alt="Work 8">
+                </div>
             </div>
         </div>
-    </div>
-
-    <!-- Footer -->
-    <footer class="text-center py-3 bg-light">
-        <p>&copy; 2024 The Paper Garden. All Rights Reserved.</p>
+    </section>
+    
+    <footer class="bg-dark text-light py-3">
+        <div class="container text-center">
+            <p>&copy; DESIGNED BY KEERTHIKA A</p>
+        </div>
     </footer>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
